--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,8 @@ RMFLAGS		=	-f
 
 SRCDIR		=	src
 CFILES		=	$(SRCDIR)/philosophers.c \
-				$(SRCDIR)/s_printf.c
+				$(SRCDIR)/safe_utils.c \
+				$(SRCDIR)/utils.c \
 OBJS		=	$(CFILES:.c=.o)
 
 INCLDIR		=	include/
@@ -25,16 +26,15 @@ $(NAME):		$(OBJS)
 				@printf "\rCompiling $(NAME)..."
 				@$(CC) $(CFLAGS) $(OBJS) $(LIBS) -o $(NAME)
 				@printf "\r\n\033[32m$(NAME) compiled.\033[0m\n"
+
 clean:
 				@printf "\rCleaning object files"
 				@$(RM) $(RMFLAGS) $(OBJS)
-				@make clean -C $(LIBFT_DIR)/ --no-print-directory
 				@printf "\rObject files cleaned.\n"
 
 fclean:			clean
 				@printf "\rRemoving $(NAME)..."
 				@$(RM) $(RMFLAGS) $(NAME)
-				@make fclean -C $(LIBFT_DIR)/ --no-print-directory
 				@printf "\r$(NAME) Removed.\n"
 
 re:				fclean all
