big refactor of the way things start and end in the simulation
- add table.c
- refactor the way things are initialized and cleaned at the end
- initialize forks
- better mutex cleanup

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,6 +6,7 @@ RMFLAGS		=	-f
 
 SRCDIR		=	src
 CFILES		=	$(SRCDIR)/philosophers.c \
+				$(SRCDIR)/table.c \
 				$(SRCDIR)/threads.c \
 				$(SRCDIR)/free_thinkers/thinkers.c \
 				$(SRCDIR)/free_thinkers/thinkers_utils.c \
